<?xml version="1.0"?>
<package>
  <name>mirror_hardware</name>
  <version>0.0.1</version>
  <description>Common hardware interfaces for The Underwater Robotics Team</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/uwrt-osu/underwater-ros</url>

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>roscpp</run_depend>

  <export>
  </export>

</package>
