<?xml version="1.0"?>
<package>
  <name>shared_utils</name>
  <version>0.0.1</version>
  <description>Common custom utilities for making ROS a little easier to deal with.</description>

  <license>BSD 2</license>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="justice.251@osu.edu">Benji Justice</maintainer>

  <author email="justice.251@osu.edu">Benji Justice</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
</package>
