<?xml version="1.0"?>
<package>
  <name>underwater_ros_teleop</name>
  <version>0.0.1</version>
  <description>Teleoperation package for OSU's AUVs.</description>

  <maintainer email="cary.42@osu.edu">Conor Cary</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/uwrt-osu/underwater-ros</url>

  <author email="cary.42@osu.edu">Conor Cary</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>joy</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>joy</run_depend>
  <run_depend>roslaunch</run_depend>

  <export>
  </export>
</package>
